umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_ce+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Ce#c+3#u"} :bonds [] :charge 3 :spin "#u1 #s2"}} :counts {:success true :output {:atoms {"0" "Ce#c+3#u"} :bonds [] :charge 3 :spin "#u1 #s2"}}}
